--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Podlove Web Player
-description: The fast, flexible and responsive podcast player powered by podlove meta data.
+title: Podlove Subscribe Button
+description: Description
 theme: millidocs
 
 destination: ../dist
