--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dist/"
   ],
   "dependencies": {
+    "@podlove/html5-audio-driver": "0.6.3",
     "babel-polyfill": "6.26.0",
     "bluebird": "3.5.0",
     "clipboard": "1.6.0",
@@ -58,12 +59,12 @@
     "detect-browser": "1.6.2",
     "foundation-sites": "6.3.1",
     "hashcode": "1.0.3",
-    "@podlove/html5-audio-driver": "0.6.3",
     "iframe-resizer": "3.5.7",
     "keyboardjs": "2.3.3",
     "lodash": "4.17.4",
     "mobile-detect": "1.3.6",
     "normalize.css": "6.0.0",
+    "platform": "^1.3.5",
     "query-string": "4.3.1",
     "raven-for-redux": "1.0.0",
     "raven-js": "3.16.0",
